--- a/public/styles/header-layout.styl
+++ b/public/styles/header-layout.styl
@@ -15,3 +15,19 @@
 
   .header-layout-divider
     divider "green-to-red-wave"
+
+  .header-orders-link
+    position absolute
+    top 58px
+    right 33%
+    text-shadow 0 1px 0 rgba(0,0,0,0.5)
+    color #fff
+
+  @media all and (max-width: 1024px)
+    .header-orders-link
+      right 25%
+
+  @media all and (max-width: 768px)
+    .header-orders-link
+      right 180px
+    
