--- a/public/views/about.jade
+++ b/public/views/about.jade
@@ -11,9 +11,9 @@
 
     .about-photos
       .about-photos-row
-        img.about-photos-row-image(src="http://lorempixel.com/510/306/nightlife/1/")
-        img.about-photos-row-image(src="http://lorempixel.com/510/306/nightlife/2/")
-        img.about-photos-row-image(src="http://lorempixel.com/510/306/nightlife/3/")
+        img.about-photos-row-image(src="/images/about/photo0.png")
+        img.about-photos-row-image(src="/images/about/photo1.png")
+        img.about-photos-row-image(src="/images/about/photo2.png")
 
     .about-content
       .about-content-description
