Orders for iphone

--- a/public/styles/button.styl
+++ b/public/styles/button.styl
@@ -34,3 +34,14 @@
     &:hover
       border-color #d6292c
       background none
+
+  &.button-detail
+    padding 3px 9px 5px 9px
+    border 1px solid #e3e3e3
+    background-color #f4f4f4
+    background-image linear-gradient(top, #f0f0f0, white 3%, #e8e8e8)
+    box-shadow inset 0 1px 0 0 white
+    serif 16px
+
+    &:hover
+      background none
