--- a/public/styles/rolled-cart.styl
+++ b/public/styles/rolled-cart.styl
@@ -26,3 +26,11 @@
       border 1px solid #7F8F31
       background-image linear-gradient(top, #BAC56A, #8EA635)
       box-shadow inset 0px 2px 0px 0 #D8E091
+
+
+@media all and (max-width: 640px)
+    .rolled-cart-button
+      visibility hidden
+
+    .rolled-cart-button-cart
+      visibility visible
