--- a/public/styles/user.styl
+++ b/public/styles/user.styl
@@ -17,3 +17,10 @@
     serif 16px
     color white
     cursor pointer
+
+@media all and (max-width: 768px)
+  .user
+    top 5px
+
+    .user-username
+      display none
