--- a/public/index.jade
+++ b/public/index.jade
@@ -6,9 +6,10 @@ html(lang="ru")
     link(rel="stylesheet", href="//fonts.googleapis.com/css?family=PT+Serif+Caption:400&subset=latin,cyrillic")
     link(rel="stylesheet", href="//fonts.googleapis.com/css?family=PT+Sans:400,400italic,700&subset=latin,cyrillic")
     link(rel="stylesheet", href="/components/normalize-css/normalize.css")
-    link(rel="stylesheet", href="/components/jquery.ui/themes/base/jquery.ui.base.css")
-    link(rel="stylesheet", href="/components/jquery.ui/themes/base/jquery.ui.theme.css")
-    link(rel="stylesheet", href="/components/jquery.ui/themes/base/jquery.ui.datepicker.css")
+    link(rel="stylesheet", href="/components/jquery-ui/themes/base/jquery.ui.base.css")
+    link(rel="stylesheet", href="/components/jquery-ui/themes/base/jquery.ui.theme.css")
+    link(rel="stylesheet", href="/components/jquery-ui/themes/base/jquery.ui.datepicker.css")
+    link(rel="stylesheet", href="/components/select2/select2.css")
     link(rel="stylesheet", href="/styles/index.css")
     script(src="/components/modernizr/modernizr.js")
   body(data-ng-app="barbudosApp")
@@ -17,13 +18,14 @@ html(lang="ru")
     include views/footer
 
     script(src="/components/jquery/jquery.min.js")
-    script(src="/components/jquery.ui/ui/jquery.ui.widget.js")
-    script(src="/components/jquery.ui/ui/jquery.ui.core.js")
-    script(src="/components/jquery.ui/ui/jquery.ui.datepicker.js")
-    script(src="/components/jquery.ui/ui/i18n/jquery.ui.datepicker-ru.js")
+    script(src="/components/jquery-ui/ui/jquery.ui.widget.js")
+    script(src="/components/jquery-ui/ui/jquery.ui.core.js")
+    script(src="/components/jquery-ui/ui/jquery.ui.datepicker.js")
+    script(src="/components/jquery-ui/ui/i18n/jquery.ui.datepicker-ru.js")
     script(src="/components/jquery-file-upload/js/jquery.iframe-transport.js")
     script(src="/components/jquery-file-upload/js/jquery.fileupload.js")
     script(src="/components/ftscroller/lib/ftscroller.js")
+    script(src="/components/select2/select2.js")
     script(src="//api-maps.yandex.ru/2.0-stable/?load=package.standard&lang=ru-RU")
 
     script(src="/components/angular/angular.min.js")
