--- a/public/styles/header-layout.styl
+++ b/public/styles/header-layout.styl
@@ -19,7 +19,7 @@
   .header-orders-link
     position absolute
     top 58px
-    right 33%
+    right 32%
     text-shadow 0 1px 0 rgba(0,0,0,0.5)
     color #fff
 
@@ -29,5 +29,6 @@
 
   @media all and (max-width: 768px)
     .header-orders-link
+      top 48px
       right 180px
     
