About page text

--- a/public/views/about.jade
+++ b/public/views/about.jade
@@ -17,18 +17,22 @@
 
     .about-content
       .about-content-description
+        p Добро пожаловать на&nbsp;остров свободы&nbsp;– бар&nbsp;«Барбудос»!
+
+        p 
+          | «Barbudos»&nbsp;— что&nbsp;в&nbsp;переводе бородачи, цвет революции Кубы… Фидель
+          | и&nbsp;Че&nbsp;Гевара.
+
         p
-          | Возмущение плотности, несмотря на внешние воздействия, упруго
-          | ускоряет поглотительный гончарный дренаж при любом их взаимном
-          | расположении.
-        p
-          | Несмотря на кажущуюся простоту эксперимента, натяжение
-          | непрерывно. Напряжение растворяет турбулентный грунт, что дает
-          | возможность использования данной методики как универсальной.
-        p
-          | Определение, вследствие пространственной неоднородности почвенного
-          | покрова, ускоряет смешанный гранулометрический анализ, хотя этот
-          | факт нуждается в дальнейшей тщательной экспериментальной проверке.
+          | Здесь вы можете встретиться с&nbsp;друзьями и&nbsp;в&nbsp;непринужденной,
+          | демократичной обстановке выпить холодный мохито или
+          | горячительный ром. Кухня порадует вас изобилием кубинской,
+          | латиноамериканской, а&nbsp;так&nbsp;же&nbsp;европейской культуры.
+          | Мы&nbsp;рады предложить Вам классический Буррито, Чимичангас, Кесадильяс
+          | с&nbsp;любыми начинками и, конечно&nbsp;же, шипящий Фахитас. Будь вы
+          | новичок в&nbsp;кубинской или мексиканской еде или опытный ветеран
+          | de&nbsp;la&nbsp;Comida&nbsp;Latino, мы&nbsp;уверены, что Вы найдете
+          | блюда, которые обязательно полюбите!
 
       .about-content-address
         h2.about-content-address-title Наш адрес
